added accesslink URLs in Main to replace placeholders